<resources>
    <string name="app_name">Vitals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_overview">Overview</string>
    <string name="navigation_activity">Activity</string>
    <string name="navigation_timeline">Activity</string>
    <string name="navigation_reminder">Reminder</string>
    <string name="navigation_chart"   >Chart</string>
    <string name="navigation_measure" >Measure</string>
    <string name="navigation_setting" >Setting</string>
    <string name="navigation_privacy" >Privacy</string>
    <string name="navigation_logout"  >Logout</string>
    <string name="title_overview">Overview</string>
    <string name="title_timeline">Activity</string>
    <string name="title_photo">Photo</string>
    <string name="title_signs_and_symptoms">Signs And Symptoms</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_reminder">Reminder</string>
    <string name="remark">Remark</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="height">Height (CM)</string>
    <string name="weight">Weight (KG)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="today">Today</string>
    <string name="sign_and_symptom_remark">Select the sign and symptoms you are having now.</string>
    <string name="squarecamera__request_write_storage_permission_text">
        Approval is needed to save your photo on your device
    </string>
    <string name="main_title">Update Profile</string>
    <string name="symptom_title">Sign and Symptoms</string>
    <string name="ade_title">Automatic Data Entry</string>
    <string name="measured_title">Measured</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="spo2">SpO2</string>
    <string name="device.info.no_pair_device">No Paired Device</string>
    <string name="device.info.retrieve_data">Retrieving Data</string>
    <string name="glucose.title.pair_device">Turn On Medisafe Fit</string>
    <string name="glucose.info.pair_device_step1">To start pairing, turn on Medisafe Fit Glucometer by pressing the green button.</string>
    <string name="glucose.info.pair_device_step2">Tap your glucometer to the bottom of your phone until a beep sound is heard.</string>
    <string name="glucose.info.tap_device">Tap your device to your phone</string>
    <string name="glucose.info.pair_device">Glucometer not paired. Press to pair device</string>
    <string name="weight.info.pair_device">Weigh scale not paired. Press to pair device</string>
    <string name="thermo.info.pair_device">Thermometer not paired. Press to pair device</string>
    <string name="pairing.bluetooth.success">Pairing Success</string>
    <string name="pairing.bluetooth.fail">Pairing Failed</string>
    <string name="pairing.bluetooth.enter_pairing">Enter Pairing Mode</string>
    <string name="pairing.bluetooth.enter_reading">Retrieving Data</string>
    <string name="pairing.bluetooth.not_connected">Bluetooth is not turned on.\nPress to connect</string>
    <string name="pairing.timeout">Connection timed out</string>
    <string name="pairing.reading_success">Data Retrieved</string>
    <string name="pairing.reading_fail">Failed to Retrieve Data</string>
    <string name="pairing.reading_fail_no_device">No Device</string>
    <string name="pairing.reading_fail_error">Connection Error</string>
    <string name="pairing.nfc.not_connected">NFC is not turned on.\nPress to connect</string>
    <string name="pairing.nfc.ble.not_connected">NFC and BLE are not turned on.</string>
    <string name="pairing.nfc.enter_pairing_mode">Enter Pairing Mode</string>
    <string name="pairing.nfc.enter_reading_mode">Retrieving Data</string>
    <string name="blood_pressure.info.press_button">Press the front button of Blood Pressure Meter to start taking reading.</string>
    <string name="blood_pressure.info.pair_device">Blood Pressure meter not paired. Press to pair device</string>
    <string name="blood_pressure.info.pair_device_step">Long press the Start Button until PR is shown.</string>
    <string name="nonin_oximeter.info.pair_device_step">Turn on your oximeter device by inserting middle finger into the device to start pairing.</string>
    <string name="berry_oximeter.info.pair_device_step">Turn on your oximeter device to start pairing.</string>
    <string name="zencro_x6.info.pair_device_step">Press on the triangular button on your pedometer to start pairing.</string>
    <string name="accu_chek.info.pair_device_step">Turn on the device by pressing OK Button. Select Settings > Wireless > Pairing > Pair Device to activate pairing mode.</string>
    <string name="weight.info.pair_device_step">Long press the set button at the back of your scale until PR is shown.</string>
    <string name="weight.info.press_button">Step on the weighscale to start taking reading.</string>
    <string name="thermo.info.take_reading">Place the sensor tip in preferred measurement site such as oral or underarm to start taking reading.</string>
    <string name="thermo.info.pair_device_step">Press the button on top of your thermometer once to turn it on. When L is displayed, press once again until PR is shown on screen.</string>
    <string name="weight.info.weight">Weight</string>
    <string name="temperature.info.temperature">Temperature</string>
    <string name="manual_title">Manual Entry</string>
    <string name="sugar_con_subtitle">Sugar Concentration</string>
    <string name="no_value_date">DD MM YYYY</string>
    <string name="no_value_time">HH:MM</string>
    <string name="dialog.ok">OK</string>
    <string name="dialog.cancel">Cancel</string>
    <string name="title_activity_forgot_pass">Forgot Password</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_chart">Chart</string>
    <string name="title_activity_glucose_reading">Blood Glucose Reading</string>
    <string name="title_activity_blood_pressure_reading">Blood Pressure Reading</string>
    <string name="title_activity_weight_reading">Weight Reading</string>
    <string name="title_activity_temperature_reading">Temperature Reading</string>
    <string name="title_activity_spo2_reading">SpO2 Reading</string>
    <string name="title_activity_medication_taken">Medication Taken</string>
    <string name="title_activity_measure">Take a Measurement</string>
    <string name="title_activity_measurement_reading">Measurement Reading</string>
    <string name="title_activity_camera">Take Photo of Food</string>
    <string name="title_activity_camera_edit">Food Taken</string>
    <string name="title_activity_sign_and_symptoms">How do you feel?</string>
    <string name="login.email">Email</string>
    <string name="login.password">Password</string>
    <string name="login.confirm_password">Confirm Password</string>
    <string name="login.login">Login</string>
    <string name="login.sign_up">Sign Up</string>
    <string name="login.forgot_password">Forgot Password?</string>
    <string name="login.fail">Login Failed</string>
    <string name="login.fail_msg">Please try again!</string>
    <string name="login.connect_to_server_fail_msg">Failed to connect to server! Please try again!</string>
    <string name="login.success">Login Success</string>
    <string name="logout.title">Log Out</string>
    <string name="logout.confirmation">Are you sure you want to log out?</string>
    <string name="logout.success_title">Log out Successful</string>
    <string name="logout.fail_title">Log out Failed</string>
    <string name="logout.success_message">You\'ll be redirected to login page.</string>
    <string name="logout.fail_message">Please check if your internet is turned on.</string>
    <string name="forgot_pass.fail">Sending failed</string>
    <string name="forgot_pass.fail_message">Please try again!</string>
    <string name="forgot_pass.success">Recovery Email Sent</string>
    <string name="forgot_pass.success_message">Please check your inbox for instruction to reset your password.</string>
    <string name="signup.agree_to_terms">I agree with the terms and conditions.</string>
    <string name="signup.first_name">First Name</string>
    <string name="signup.last_name">Last Name</string>
    <string name="error.title.no_internet">No Internet Connection</string>
    <string name="error.msg.no_internet">Please check if your internet is turned on.</string>
    <string name="error.title.incomplete_form">Incomplete Form</string>
    <string name="error.msg.incomplete_form">Please fill in all necessary fields.</string>
    <string name="error.title.no_selection">No Symptom Selected</string>
    <string name="error.msg.no_selection">Please select at least one symptom.</string>
    <string name="error.msg.overly_high_glucose">"Your glucose level seems to be too high for this unit. Perhaps you mean mg/dL?"</string>
    <string name="success.title.detected_data">Successful Data Importation</string>
    <string name="success.msg.detected_data">Blood glucose: %1$d , %2$s</string>
    <string name="confirm.title.confirm_deletion">Are you sure you want to delete this %1$s?</string>
    <string name="confirm.msg.confirm_deletion">Once confirmed, changes cannot be reverted.</string>
    <string name="display.unit.mmol_per_l">mmol/L</string>
    <string name="display.unit.mg_per_dl">mg/dL</string>
    <string name="display.unit.tablet">tablet</string>
    <string name="display.unit.unit">unit</string>
    <string name="display.unit.ml">ml</string>
    <string name="display.unit.pulse_rate">bpm</string>
    <string name="display.unit.blood_pressure.si">mm Hg</string>
    <string name="display.unit.blood_pressure.imperial">kPa</string>
    <string name="display.unit.weight.si">kg</string>
    <string name="display.unit.weight.imperial">lb</string>
    <string name="display.unit.temperature.celsius">°C</string>
    <string name="display.unit.temperature.fahrenheit">°F</string>
    <string name="display.info.before_meal">Before Meal</string>
    <string name="display.info.after_meal">After Meal</string>
    <string name="display.unit.medication_title">Unit</string>
    <string name="info.msg.empty_reminder_list">You do not have any reminder yet</string>
    <string name="info.msg.forgot_pass">Please fill in the email you\'ve used for Vitals App Registration. An email will be sent shortly.</string>
    <string name="info.msg.empty_medical_device_list">You are not connected to any medical device yet</string>
    <string name="and_medical">A&amp;D Medical</string>
    <string name="foracare">ForaCare</string>
    <string name="terumo_medical_corparation">Terumo Medical Corporation</string>
    <string name="taidoc">TaiDoc</string>
    <string name="berry">Berry</string>
    <string name="nonin">Nonin</string>
    <string name="terumo_medisafe_fit">Medisafe FIT</string>
    <string name="terumo_medisafe_fit_description">The Medisafe FIT blood glucose meter is a high quality medical device, which combines reliability and ease of use. </string>
    <string name="aandd_deluxe_connected_weight_scale">Precision Health Scale</string>
    <string name="aandd_deluxe_connected_blood_pressure_meter">Upper Arm Blood Pressure Monitor</string>
    <string name="save">Save</string>
</resources>