<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_overview"
            android:title="@string/navigation_dashboard"
            android:icon="@drawable/sidebar_dashboard_selector"
            >
        </item>

       <!-- <item
            android:id="@+id/nav_timeline"
            android:title="@string/navigation_timeline"
            android:icon="@drawable/ic_timeline">
        </item>-->

        <item
            android:id="@+id/nav_reminder"
            android:title="@string/navigation_reminder"
            android:icon="@drawable/sidebar_reminder_selector">
        </item>

        <item
            android:id="@+id/nav_measure"
            android:title="@string/navigation_measure"
            android:icon="@drawable/sidebar_devices_selector">
        </item>

        <!--<item
            android:id="@+id/nav_chart"
            android:title="@string/navigation_chart"
            android:icon="@drawable/ic_chart">
        </item>-->

        <item
            android:id="@+id/nav_setting"
            android:title="@string/navigation_setting"
            android:icon="@drawable/sidebar_setting_selector">
        </item>

        <item
            android:id="@+id/nav_privacy"
            android:title="@string/navigation_privacy"
            android:icon="@drawable/sidebar_privacy_selector">
        </item>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/navigation_logout"
            android:icon="@drawable/sidebar_logout_selector">
        </item>
    </group>
</menu>