<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_above="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:id="@+id/profileImage"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_male_large"/>

            <TextView
                android:id="@+id/text_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_marginLeft="14dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                android:background="@drawable/edit_text_border"
                android:padding="8dp"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:id="@+id/text_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_marginLeft="14dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="17"
                android:hint="Last Name"
                android:background="@drawable/edit_text_border"
                android:padding="8dp"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/AgeTitle"
                android:layout_marginLeft="14dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:background="@drawable/edit_text_border"
                android:padding="8dp"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="Age"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/GenderTitle"
                android:layout_marginLeft="14dp"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:id="@+id/layout_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:background="@drawable/rect_top_radius">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textSize="@dimen/font_title_small"
                    android:textColor="@android:color/black"
                    android:id="@+id/proMale"
                    android:clickable="false"
                    android:layout_gravity="start|center_vertical"
                    android:padding="8dp" />

                <ImageButton
                    android:id="@+id/btnMale"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_normal_tick"
                    android:adjustViewBounds="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:background="@drawable/rect_bottom_radius">

                <TextView
                    android:id="@+id/proFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textSize="@dimen/font_title_small"
                    android:textColor="@android:color/black"
                    android:layout_gravity="start|center_vertical"
                    android:clickable="false"
                    android:padding="8dp"/>

                <ImageButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/btnFemale"
                    android:background="@drawable/ic_normal_tick"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:visibility="invisible"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:id="@+id/HeightTitle"
                android:layout_marginLeft="14dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:ems="10"
                android:background="@drawable/edit_text_border"
                android:padding="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="CM"/>

            <TextView
                android:id="@+id/WeightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_marginLeft="14dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:padding="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_border_greyed_out"
                android:textColor="@color/edit_text_text_color"
                android:hint="--"
                android:enabled="false"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        style="@style/green_button"/>
</RelativeLayout>